<resources>
    <string name="app_name">MakeAReminder</string>
    <string name="new_reminder"><u>+ New Reminder</u></string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="on_off">Toggle Reminder</string>
    <string name="name_label">Name</string>
    <string name="date_picker_title">Date Task Due</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="location">Location</string>
    <string name="new_task">New Task</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="when_due">When due.</string>
    <string name="before_due">Before due.</string>


    <string name="group_due">Due Today: %1$d"</string>
    <string name="group_overdue">Overdue: %1$d"</string>


    <string name="reminder_add_dialog">Add a Reminder</string>
    <string name="reminder_edit_dialog">Edit Reminder</string>

    <string name="create_reminder">Create Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="snooze_text">%1$s%2$s</string>
    <string name="minute_letter">m</string>
    <string name="hour_letter">h</string>
    <string name="day_letter">d</string>
    <string name="week_letter">w</string>
    <string name="alarm_reminder">%1$s : %2$s</string>


    <string name="time_text_1">%1$s %2$s %3$s</string>
    <string name="time_text_2">%1$s %2$s &amp; %3$s %4$s</string>
    <string name="time_text_3">%1$s %2$s, %3$s &amp; %4$s %5$s</string>
    <string name="time_text_4">%1$s %2$s, %3$s, %4$s &amp; %5$s %6$s</string>


    <string name="reminders">Reminders</string>
    <string name="name_task_warning">Please Name Task</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="alarm">Alarm</string>

    <string name="notification">Notification</string>
    <string name="repeat_title">Set Repeat Duration</string>
    <string name="repeat_positive">Set Repeat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="more_often"><u>More Often?</u></string>
    <string name="add_repeat_time"><u>+ Repeat Time</u></string>
    <string name="save">Save</string>
    <string name="set_date"><u>Set Date</u></string>
    <string name="set_time"><u>Set Time</u></string>
    <string name="set_snooze">Set Snooze</string>
    <string name="reset">Reset</string>
    <string name="test_alarm">Test Alarm</string>
    <string name="time_default">00:00</string>
    <string name="snooze_text_2">%1$s and %2$s</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="snoozed_till">Snoozed until %1$s</string>
    <string name="every_day">Every Day</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="incomplete">Mark incomplete</string>
    <string name="start_day">Start Day</string>
    <string name="task_time">1 Jan 1990</string>
    <string name="remove_repeat">Remove Repeat</string>
    <string name="new_group">New Group</string>
    <string name="group_name_label">Group Name</string>
    <string name="task_name_label">Task Name</string>
    <string name="select_color">Select Color</string>
    <string name="change_color">Change Color</string>
    <string name="set_default_snooze">Set Default Snooze</string>
    <string name="set_default_time">Set Default Time</string>
    <string name="set_default_repeat">Set Default Repeat</string>
    <string name="clear_time">Clear Time</string>
    <string name="clear_default_snooze">Clear Default Snooze</string>
    <string name="clear_snooze">Clear Snooze</string>
    <string name="snooze_for">Snooze For:</string>
    <string name="every">Every</string>
    <string name="default_time">Default Time</string>
    <string name="default_repeat">Default Repeat</string>
    <string name="default_snooze">Default Snooze</string>
    <string name="default_reminders">Default Reminders</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="no_date">No Date</string>
    <string name="no_default_time">No Default Time</string>
    <string name="no_default_repeat">No Default Repeat</string>
    <string name="set_quick_snooze"><u>Set Quick Snooze</u></string>
    <string name="set_repeat"><u>Set Repeat</u></string>
    <string name="due">Due</string>
    <string name="alerts">Alerts</string>
    <string name="last_day">Last Day</string>
    <string name="info">Info</string>
    <string name="set_snooze_duration">Set Snooze Duration</string>
    <string name="complete">Complete</string>
    <string name="restore">Restore</string>
    <string name="alter_alert"><u>Alter Alert</u></string>
    <string name="alert_type">Alert Type</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="ok">OK</string>
    <string name="customize_alert"><u>Customize Alert</u></string>
    <string name="customize_alerts"><u>Customize Alerts</u></string>
    <string name="customize_alerts_set"><u>Customize Alerts: %s</u>></string>
    <string name="group">Group</string>
    <string name="at">at</string>
    <string name="on">on</string>
    <string name="reg_separator">,\u0020</string>
    <string name="final_separator">\u0020&amp;\u0020</string>
    <string name="on_the">on the</string>
    <string name="the_last_day">the last day</string>
    <string name="set_sound"><u>Set Sound</u></string>
    <string name="vibration">Vibration</string>
    <string name="alarm_notification">Alarm | Notification</string>
    <string-array name="alert_type_array">
        <item>Alarm</item>
        <item>Notification</item>
    </string-array>
    <string-array name="alert_sounds">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        <item>Sound 4</item>
        <item>Sound 5</item>
    </string-array>

    <string-array name="group_colors">
        <item>#ffff0000</item>
        <item>#ff0000ff</item>
        <item>#ff008000</item>

        <item>#ffff8c00</item>
        <item>#FFffff00</item>
        <item>#ff00ff00</item>

        <item>#ff00bfff</item>
        <item>#ffC70039</item>
        <item>#ffffc0cb</item>


        <item>#ffee82ee</item>
        <item>#ffc0c0c0</item>
        <item>#ff000000</item>
    </string-array>
    <string-array name="snooze_array">
        <item>15 Mins</item>
        <item>30 Mins</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
        <item>Custom</item>
    </string-array>
    <string-array name="snooze_labels">
        <item>1m</item>
        <item>15m</item>
        <item>5m</item>
        <item>30m</item>
        <item>10m</item>
        <item>60m</item>
        <item>2h</item>
        <item>1d</item>
        <item>4h</item>
        <item>1w</item>
        <item>8h</item>
        <item>30d</item>
    </string-array>
    <string-array name="days_of_the_week_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="time_type_reminder">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
    <string-array name="time_type_repeat">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string-array name="time_type_span">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>


    <plurals name="minute_show_1">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hour_show_1">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="day_show_1">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks_show_1">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months_show_1">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years_show_1">
        <item quantity="one">%d year</item>
        <item quantity="other">%d year</item>
    </plurals>


    <plurals name="minute">
        <item quantity="one"> minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one"> hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="day">
        <item quantity="one"> day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one"> week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one"> month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one"> year</item>
        <item quantity="other">%d year</item>
    </plurals>
</resources>
