<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp">
    <TextView
        android:id="@+id/name_label"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/group_name_label"
        android:labelFor="@+id/task_name"
        />
    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:textSize="40sp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/time_button"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"/>
    <Button
        android:id="@+id/repeat_button"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat" />
    <Button
        android:textSize="22sp"
        android:id="@+id/snooze_button"
        android:text="@string/default_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="22sp"
        android:text="@string/reminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/reminder_list_view"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ListView>
</LinearLayout>